k8s/keycloak-ingress-nip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-nip
  namespace: keycloak
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - keycloak.46-62-130-16.nip.io
      secretName: keycloak-nip-tls
  rules:
    - host: keycloak.46-62-130-16.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
