k8s/keycloak-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: socialbook
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: socialbook
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak.46-62-130-16.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
